--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,7 +9,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-
+  font-family: Arial, sans-serif;
 }
 
 #openTodos {
@@ -41,13 +41,16 @@
     background: darkgray;
     padding: 0.5rem;
     color: white;
+    text-align: left;
 
     &:first-child {
       border-radius: 5px 0 0 5px;
+      text-align: center;
     }
 
     &:last-child {
       border-radius: 0 5px 5px 0;
+      text-align: right;
     }
 
     & i {
