--- a/src/scss/editForm.scss
+++ b/src/scss/editForm.scss
@@ -15,6 +15,11 @@
     font-size: 1.2rem;
   }
 
+  & textarea {
+    font-family: Arial, sans-serif;
+    min-height: 200px;
+  }
+
   & button {
     font-size: 1.2rem;
     margin-top: 70px;
