--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -42,6 +42,7 @@
     text-align: left;
     color: white;
     background: darkgray;
+    line-height: 1.7;
 
     & i {
       margin-right: 0.5rem;
@@ -62,6 +63,7 @@
     color: darkgray;
     background: lightgray;
     overflow: hidden;
+    line-height: 1.7;
 
     &:first-child {
       text-align: center;
