--- a/src/scss/editForm.scss
+++ b/src/scss/editForm.scss
@@ -15,9 +15,15 @@
     font-size: 1.2rem;
   }
 
+  & input, select {
+    border: none;
+    border-bottom: 1px solid lightgray;;
+  }
+
   & textarea {
     font-family: Arial, sans-serif;
     min-height: 200px;
+    border: 1px solid lightgray;
   }
 
   & button {
